# eqraa-mobile

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_FEATURES.md  README.md  eslint.config.js  index.html  iqraa-landing.html  package.json  pnpm-lock.yaml  progress.txt  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: CLAUDE_SETUP.md
.github/prompts/: plan-fullProjectLocalization.prompt.md  ralph-task.prompt.md
.github/workflows/: release-android.yml  release.yml  security-check.yml  test.yml
.husky/: pre-commit
agent-os/: config.yml
pkg/arch/: PKGBUILD  eqraa-desktop.desktop
scripts/: check-i18n.js  performance-test.js
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx  IconButton.tsx  LoadingFallback.tsx  PageHeader.tsx  StatCard.tsx  language-toggle.tsx  providers.tsx  theme-provider.tsx  theme-toggle.tsx
src/contexts/: LanguageContext.tsx
src/hooks/: use-mobile.tsx  useChartStats.ts  useHomeStats.ts  usePagination.ts
src/layouts/: MobileHeader.tsx  MobileLayout.tsx
src/lib/: constants.ts  labels.ts  logger.ts  supabaseTransformers.ts  translations.ts  validations.ts
src/test/: setup.ts  validations.test.ts
src/types/: index.ts
src/views/: Admin.tsx  Announcements.tsx  Attendance.tsx  Educational.tsx  EducationalEthicsBehavior.tsx  EducationalFamilyPrograms.tsx  Exams.tsx  (+18 more)
(+116 files in other folders)
