[package]
name = "eqraa-desktop"
version = "0.2.0"
description = "Eqraa Center Hub - Desktop Edition"
authors = ["Mahmoud"]
edition = "2021"

[lib]
name = "eqraa_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
