[package]
name = "eqraa-mobile"
version = "0.1.0"
description = "Eqraa - Mobile Edition"
authors = ["Mahmoud"]
edition = "2021"

[lib]
name = "eqraa_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

libsqlite3-sys = { version = "0.30", features = ["bundled"] }
